--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -12,6 +12,8 @@ permissions:
 jobs:
   deploy-gh-pages:
     runs-on: ubuntu-latest
+    # 仅当提交信息包含 [deploy] 或 [update] 标签时触发
+    if: ${{ contains(github.event.head_commit.message, '[deploy]') || contains(github.event.head_commit.message, '[update]') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
