添加事件触发逻辑

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - master
+  repository_dispatch: # 事件触发
+    types: [trigger_deployment_vscode_site]
 
 permissions:
   contents: write
@@ -12,17 +14,44 @@ permissions:
 jobs:
   deploy-gh-pages:
     runs-on: ubuntu-latest
-    # 仅当提交信息包含 [deploy] 或 [update] 标签时触发
-    if: ${{ contains(github.event.head_commit.message, '[deploy]') || contains(github.event.head_commit.message, '[update]') }}
+    # push时，只有提交信息包含 [deploy] 或 [update] 标签时触发
+    # repository_dispatch时，只有 event-type 为 trigger_site_deployment 时触发
+    if: |
+      github.event_name == 'repository_dispatch' && github.event.action == 'trigger_deployment_vscode_site' ||
+      (github.event_name == 'push' && 
+        (contains(github.event.head_commit.message, '[deploy]') || contains(github.event.head_commit.message, '[update]')))
     steps:
+      - name: 打印相关路径
+        run: | # | 为 yaml 的特定符号，其下可以使用多行文字。
+          echo "当前路径为 $(pwd)"
+          ls -alh
+          echo "github.workspace路径为 ${{ github.workspace }}"
+          ls ${{ github.workspace }} -alh
+          echo "HOME路径为 $HOME"
+          ls $HOME -alh
+      
+      # 打印触发信息
+      - name: Log trigger source
+        run: |
+          echo "Triggered by: ${{ github.event_name }}"
+          if [[ "${{ github.event_name }}" == "repository_dispatch" ]]; then
+            echo "This deployment was triggered by docs repository"
+            echo "Dispatch SHA: ${{ github.event.client_payload.sha }}"
+            echo "Dispatch Repository: ${{ github.event.client_payload.repository }}"
+            echo "Triggered at: ${{ github.event.client_payload.timestamp }}"
+          else
+            echo "Push SHA: ${{ github.sha }}"
+          fi
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # 如果你文档需要 Git 子模块，取消注释下一行
+          # 这一行只能检出本仓库中记录的子模块的版本，无法更到远程最新后面单独处理
           submodules: true
-
-
+      
+      - name: 更新子模块到远程最新版本
+        run: |
+          git submodule update --remote
 
       - name: 设置 Node.js
         uses: actions/setup-node@v4
